--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "vue": "^3.4.35",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
