--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.7.3",
     "vue": "^3.4.35",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.4.3"
+    "vue-router": "^4.4.3",
+    "vue-sweetalert2": "^5.0.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
