--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@kalimahapps/vue-icons": "^1.7.1",
     "axios": "^1.7.3",
+    "chart.js": "^4.4.4",
     "vue": "^3.4.35",
     "vue-axios": "^3.5.2",
+    "vue-chartjs": "^5.3.1",
     "vue-cookies": "^1.8.4",
     "vue-router": "^4.4.3",
     "vue-signature": "^2.6.0",
